# ooc-app

./: .env.development  .env.example  .env.production  .gitignore  LICENSE  README.md  eslint.config.mjs  index.html  package-lock.json  package.json  playwright.config.ts  playwright.flask.config.ts  playwright.tauri.config.ts  roadmap.md  todo.md  todo.txt  tsconfig.app.json  tsconfig.json  tsconfig.test.json  vite.config.ts  vitest.config.mjs  vitest.config.ts
.cursor/rules/: agent-behavior.mdc  ci-github-actions.mdc  e2e-playwright.mdc  frontend-react-redux.mdc  frontend-styles-i18n.mdc  frontend-testing.mdc  project-context.mdc  python-architecture.mdc  python-quality-tests.mdc  tauri-rust.mdc
.github/: dependabot.yml
.github/workflows/: README.md  build.yml  ci.yml
docs/: README.md  architecture.md  build-and-release.md  development.md  i18n.md  security-and-config.md  testing.md  troubleshooting.md
e2e/: api-failures.spec.ts  axe-helpers.ts  flask-integration.spec.ts  qa-key-paths.spec.ts  settings-data-tab.spec.ts  settings-tabs.spec.ts  smoke.spec.ts  story-actions.spec.ts  story-business.spec.ts  story-flow.spec.ts  summary-flow.spec.ts  tauri-desktop.spec.mjs  tauri-desktop.spec.ts  tauri-fixtures.mjs  tauri-fixtures.ts
e2e/helpers/: mockStoryApi.ts  storyFlow.ts
eslint-rules/: no-unknown-as.js
scripts/: check-i18n-keys.mjs  desktop-ga-check.mjs  e2e-flask-webserver.mjs  move-build-output.js  python-runner.mjs  run-frontend-tests.mjs  server-dev-local.mjs  web-dev-local.mjs  wsl-tauri-dev-debug.sh  wsl-tauri-e2e-run-only.sh  wsl-tauri-e2e-verify.sh
server/: .coverage  .flake8  README.md  __init__.py  app.py  build.py  config.py  coverage.xml  flask-api.spec  pyproject.toml  requirements-test.txt  requirements.txt  run.py
server/api/: __init__.py  routes.py
server/data/: chat.db
server/scripts/: check_i18n.py  check_i18n.sh  fix_chinese_comments.py
server/services/: __init__.py  ai_service.py  deepseek_service.py  ollama_service.py
server/src/: README.md  __init__.py  app.py
server/tests/: README.md  __init__.py  conftest.py  test_ai_service.py  test_app_settings_service.py  test_character_record_repository.py  test_character_service.py  test_chat_service.py  test_conversation_repository.py  test_conversation_service.py  test_db_path.py  test_prompt_template_loader.py  test_settings_controller.py  test_summary_service.py  (+1 more)
src/: App.tsx  README.md  main.tsx  styles.module.scss
src-tauri/: 2  Cargo.toml  tauri.conf.json  tauri.linux.conf.json
src-tauri/capabilities/: default.json  playwright-e2e.json
src-tauri/icons/: icon.icns
src-tauri/src/: api.rs  backup_crypto.rs  commands.rs  diagnostics.rs  logger.rs  main.rs  profile_paths.rs  python_http.rs  python_lifecycle.rs  python_server.rs
(+375 files in other folders)
