[package]
name = "ooc-tauri-app"
version = "0.2.0"
description = "OOC story with Embedded Python Flask API"
authors = ["Patrick Zhang"]
edition = "2021"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
tauri = { version = "2", features = [] }
windows-sys = "0.61"
tauri-plugin-shell = "2"
ctrlc = "3.4"
kill_tree = "0.2"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }
