[package]
name = "ooc-tauri-app"
version = "0.2.0"
description = "OOC story with Embedded Python Flask API"
authors = ["Patrick Zhang"]
edition = "2021"

[features]
default = []
# When enabled, registers the Playwright control plugin at runtime (desktop E2E).
# The crate stays linked so Tauri can resolve playwright:default in capabilities.
e2e-testing = []

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
tauri = { version = "2.11", features = ["tray-icon"] }
windows-sys = "0.61"
tauri-plugin-shell = "2"
ctrlc = "3.4"
kill_tree = "0.2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-playwright = "0.4"
tauri-plugin-global-shortcut = "2"
tauri-plugin-updater = "2.10"
zip = { version = "4.6", default-features = false, features = ["deflate"] }
aes-gcm = "0.10"
argon2 = "0.5"
base64 = "0.22"
rand = "0.8"

[build-dependencies]
tauri-build = { version = "2.6", features = [] }

[dev-dependencies]
tempfile = "3"
